welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:1: error: Missing closing brace `}' assumed here
def close10(a:Int, b:Int): Int = {
^